utils/ql/src/main/java/com/cetus/utils/ql/QLParser.java
// $ANTLR 3.0.1 /home/vmb/app/IdeaProjects/jengine/utils/ql/src/com/jengine/utils/ql/QL.g 2014-08-09 17:11:51

package com.jengine.utils.ql;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class QLParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "MODEL_NAME", "MODEL_GROUP", "FUNCTION", "NOT_LIKE", "NOT_EQ", "IS_NULL", "IS_NOT_NULL", "IS_EMPTY", "IS_NOT_EMPTY", "NOT_IN", "NOT_BETWEEN", "FIELD", "GROUP", "TARGET", "TARGETS", "LIMIT", "GROUP_LIST", "GROUP_ITEM", "ORDER_LIST", "ORDER_ITEM", "LEFT_JOIN", "RIGHT_JOIN", "FULL_JOIN", "INNER_JOIN", "CROSS_JOIN", "SELECT_QUERY", "MODEL_EXPRESSION", "HAVING", "FROM_CLAUSE", "SELECT_CLAUSE", "WHERE_CLAUSE", "ORDER_BY_CLAUSE", "GROUP_BY_CLAUSE", "HAVING_CLAUSE", "LIMIT_CLAUSE", "EXPRESSION", "LINE_BREACK", "WS", "ML_COMMENT", "SEMI", "DOT", "COMMA", "OPEN_PAREN", "CLOSE_PAREN", "STAR", "AT_SIGN", "A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", "N", "O", "P", "Q", "R", "S", "T", "U", "V", "W", "X", "Y", "Z", "CHAR", "DIGIT", "STRING", "NUM", "PLUS", "MINUS", "NUMBER", "BOOLEAN", "DATETIME", "NULL", "DIVIDE", "VERTBAR", "EQ", "QUESTION", "GT", "LT", "LE", "GE", "NOT", "OR", "XOR", "AND", "MOD", "BITWISE_AND", "BITWISE_XOR", "BITWISE_LEFT", "BITWISE_RIGHT", "BIT_INVERSION", "ON", "IS", "IN", "LIKE", "ESCAPE", "EMPTY", "BETWEEN", "ASC", "DESC", "DISTINCT", "SELECT", "FROM", "WHERE", "ORDER", "BY", "LEFT", "JOIN", "OUTER", "RIGHT", "FULL", "INNER", "CROSS", "IDENTIFIER", "'<<'", "'>>'", "'^'", "'&'", "'<<>>'"
    };
    public static final int FUNCTION=6;
    public static final int ORDER_LIST=22;
    public static final int LT=91;
    public static final int STAR=48;
    public static final int MOD=98;
    public static final int FULL_JOIN=26;
    public static final int CHAR=76;
    public static final int GROUP_LIST=20;
    public static final int NOT=94;
    public static final int EOF=-1;
    public static final int IS_EMPTY=11;
    public static final int CROSS_JOIN=28;
    public static final int RIGHT_JOIN=25;
    public static final int BITWISE_RIGHT=102;
    public static final int ORDER_ITEM=23;
    public static final int FULL=123;
    public static final int LINE_BREACK=40;
    public static final int ESCAPE=108;
    public static final int IS_NULL=9;
    public static final int BITWISE_XOR=100;
    public static final int SELECT_CLAUSE=33;
    public static final int CLOSE_PAREN=47;
    public static final int EQ=88;
    public static final int SELECT=114;
    public static final int IS_NOT_EMPTY=12;
    public static final int DIVIDE=86;
    public static final int D=53;
    public static final int E=54;
    public static final int GE=93;
    public static final int F=55;
    public static final int G=56;
    public static final int A=50;
    public static final int B=51;
    public static final int ASC=111;
    public static final int C=52;
    public static final int L=61;
    public static final int M=62;
    public static final int N=63;
    public static final int O=64;
    public static final int H=57;
    public static final int I=58;
    public static final int NULL=85;
    public static final int J=59;
    public static final int K=60;
    public static final int NUMBER=82;
    public static final int U=70;
    public static final int ON=104;
    public static final int T=69;
    public static final int AT_SIGN=49;
    public static final int W=72;
    public static final int V=71;
    public static final int Q=66;
    public static final int P=65;
    public static final int INNER_JOIN=27;
    public static final int S=68;
    public static final int R=67;
    public static final int Y=74;
    public static final int X=73;
    public static final int EMPTY=109;
    public static final int Z=75;
    public static final int GROUP=16;
    public static final int GROUP_BY_CLAUSE=36;
    public static final int WS=41;
    public static final int GROUP_ITEM=21;
    public static final int ORDER_BY_CLAUSE=35;
    public static final int NOT_IN=13;
    public static final int OR=95;
    public static final int GT=90;
    public static final int FIELD=15;
    public static final int FROM=115;
    public static final int DISTINCT=113;
    public static final int LIMIT_CLAUSE=38;
    public static final int WHERE=116;
    public static final int BITWISE_AND=99;
    public static final int LEFT_JOIN=24;
    public static final int INNER=124;
    public static final int BIT_INVERSION=103;
    public static final int SELECT_QUERY=29;
    public static final int ORDER=117;
    public static final int LIMIT=19;
    public static final int AND=97;
    public static final int MODEL_GROUP=5;
    public static final int CROSS=125;
    public static final int FROM_CLAUSE=32;
    public static final int ML_COMMENT=42;
    public static final int WHERE_CLAUSE=34;
    public static final int BOOLEAN=83;
    public static final int IN=106;
    public static final int HAVING_CLAUSE=37;
    public static final int COMMA=45;
    public static final int IS=105;
    public static final int IDENTIFIER=126;
    public static final int LEFT=119;
    public static final int PLUS=80;
    public static final int DIGIT=77;
    public static final int DOT=44;
    public static final int EXPRESSION=39;
    public static final int LIKE=107;
    public static final int OUTER=121;
    public static final int BY=118;
    public static final int MODEL_EXPRESSION=30;
    public static final int XOR=96;
    public static final int DATETIME=84;
    public static final int NOT_LIKE=7;
    public static final int NOT_BETWEEN=14;
    public static final int OPEN_PAREN=46;
    public static final int RIGHT=122;
    public static final int BITWISE_LEFT=101;
    public static final int HAVING=31;
    public static final int TARGET=17;
    public static final int IS_NOT_NULL=10;
    public static final int MINUS=81;
    public static final int SEMI=43;
    public static final int JOIN=120;
    public static final int NOT_EQ=8;
    public static final int NUM=79;
    public static final int TARGETS=18;
    public static final int VERTBAR=87;
    public static final int QUESTION=89;
    public static final int MODEL_NAME=4;
    public static final int DESC=112;
    public static final int BETWEEN=110;
    public static final int LE=92;
    public static final int STRING=78;

        public QLParser(TokenStream input) {
            super(input);
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "/home/vmb/app/IdeaProjects/jengine/utils/ql/src/com/jengine/utils/ql/QL.g"; }


    public static class query_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start query
    // /home/vmb/app/IdeaProjects/jengine/utils/ql/src/com/jengine/utils/ql/QL.g:163:1: query : select_query ;
    public final query_return query() throws RecognitionException {
        query_return retval = new query_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        select_query_return select_query1 = null;



        try {
            // /home/vmb/app/IdeaProjects/jengine/utils/ql/src/com/jengine/utils/ql/QL.g:163:6: ( select_query )
            // /home/vmb/app/IdeaProjects/jengine/utils/ql/src/com/jengine/utils/ql/QL.g:164:2: select_query
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_select_query_in_query2119);
            select_query1=select_query();
            _fsp--;

            adaptor.addChild(root_0, select_query1.getTree());

            }

            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end query

    public static class select_query_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start select_query
    // /home/vmb/app/IdeaProjects/jengine/utils/ql/src/com/jengine/utils/ql/QL.g:167:1: select_query : ( select_clause )? from_clause ( where_clause )? ( order_by_clause )? ( group_by_clause )? ( having_clause )? ( limit_clause )? -> ^( SELECT_QUERY ( select_clause )? from_clause ( where_clause )? ( order_by_clause )? ( group_by_clause )? ( having_clause )? ( limit_clause )? ) ;
    public final select_query_return select_query() throws RecognitionException {
        select_query_return retval = new select_query_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        select_clause_return select_clause2 = null;

        from_clause_return from_clause3 = null;

        where_clause_return where_clause4 = null;

        order_by_clause_return order_by_clause5 = null;

        group_by_clause_return group_by_clause6 = null;

        having_clause_return having_clause7 = null;

        limit_clause_return limit_clause8 = null;


        RewriteRuleSubtreeStream stream_select_clause=new RewriteRuleSubtreeStream(adaptor,"rule select_clause");
        RewriteRuleSubtreeStream stream_from_clause=new RewriteRuleSubtreeStream(adaptor,"rule from_clause");
        RewriteRuleSubtreeStream stream_having_clause=new RewriteRuleSubtreeStream(adaptor,"rule having_clause");
        RewriteRuleSubtreeStream stream_limit_clause=new RewriteRuleSubtreeStream(adaptor,"rule limit_clause");
        RewriteRuleSubtreeStream stream_order_by_clause=new RewriteRuleSubtreeStream(adaptor,"rule order_by_clause");
        RewriteRuleSubtreeStream stream_where_clause=new RewriteRuleSubtreeStream(adaptor,"rule where_clause");
        RewriteRuleSubtreeStream stream_group_by_clause=new RewriteRuleSubtreeStream(adaptor,"rule group_by_clause");
        try {
            // /home/vmb/app/IdeaProjects/jengine/utils/ql/src/com/jengine/utils/ql/QL.g:167:13: ( ( select_clause )? from_clause ( where_clause )? ( order_by_clause )? ( group_by_clause )? ( having_clause )? ( limit_clause )? -> ^( SELECT_QUERY ( select_clause )? from_clause ( where_clause )? ( order_by_clause )? ( group_by_clause )? ( having_clause )? ( limit_clause )? ) )
            // /home/vmb/app/IdeaProjects/jengine/utils/ql/src/com/jengine/utils/ql/QL.g:168:2: ( select_clause )? from_clause ( where_clause )? ( order_by_clause )? ( group_by_clause )? ( having_clause )? ( limit_clause )?
            {
            // /home/vmb/app/IdeaProjects/jengine/utils/ql/src/com/jengine/utils/ql/QL.g:168:2: ( select_clause )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==SELECT) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // /home/vmb/app/IdeaProjects/jengine/utils/ql/src/com/jengine/utils/ql/QL.g:168:2: select_clause
                    {
                    pushFollow(FOLLOW_select_clause_in_select_query2133);
                    select_clause2=select_clause();
                    _fsp--;

                    stream_select_clause.add(select_clause2.getTree());

                    }
                    break;

            }

            pushFollow(FOLLOW_from_clause_in_select_query2136);
            from_clause3=from_clause();
            _fsp--;

            stream_from_clause.add(from_clause3.getTree());
            // /home/vmb/app/IdeaProjects/jengine/utils/ql/src/com/jengine/utils/ql/QL.g:168:29: ( where_clause )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==WHERE) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // /home/vmb/app/IdeaProjects/jengine/utils/ql/src/com/jengine/utils/ql/QL.g:168:29: where_clause
                    {
                    pushFollow(FOLLOW_where_clause_in_select_query2138);
                    where_clause4=where_clause();
                    _fsp--;

                    stream_where_clause.add(where_clause4.getTree());

                    }
                    break;

            }

            // /home/vmb/app/IdeaProjects/jengine/utils/ql/src/com/jengine/utils/ql/QL.g:168:43: ( order_by_clause )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==ORDER) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // /home/vmb/app/IdeaProjects/jengine/utils/ql/src/com/jengine/utils/ql/QL.g:168:43: order_by_clause
                    {
                    pushFollow(FOLLOW_order_by_clause_in_select_query2141);
                    order_by_clause5=order_by_clause();
                    _fsp--;

                    stream_order_by_clause.add(order_by_clause5.getTree());

                    }
                    break;

            }

            // /home/vmb/app/IdeaProjects/jengine/utils/ql/src/com/jengine/utils/ql/QL.g:168:60: ( group_by_clause )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==GROUP) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // /home/vmb/app/IdeaProjects/jengine/utils/ql/src/com/jengine/utils/ql/QL.g:168:60: group_by_clause
                    {
                    pushFollow(FOLLOW_group_by_clause_in_select_query2144);
                    group_by_clause6=group_by_clause();
                    _fsp--;

                    stream_group_by_clause.add(group_by_clause6.getTree());

                    }
                    break;

            }

            // /home/vmb/app/IdeaProjects/jengine/utils/ql/src/com/jengine/utils/ql/QL.g:168:77: ( having_clause )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==HAVING) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // /home/vmb/app/IdeaProjects/jengine/utils/ql/src/com/jengine/utils/ql/QL.g:168:77: having_clause
                    {
                    pushFollow(FOLLOW_having_clause_in_select_query2147);
                    having_clause7=having_clause();
                    _fsp--;

                    stream_having_clause.add(having_clause7.getTree());

                    }
                    break;

            }

            // /home/vmb/app/IdeaProjects/jengine/utils/ql/src/com/jengine/utils/ql/QL.g:168:92: ( limit_clause )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==LIMIT) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // /home/vmb/app/IdeaProjects/jengine/utils/ql/src/com/jengine/utils/ql/QL.g:168:92: limit_clause
                    {
                    pushFollow(FOLLOW_limit_clause_in_select_query2150);
                    limit_clause8=limit_clause();
                    _fsp--;

                    stream_limit_clause.add(limit_clause8.getTree());

                    }
                    break;

            }


            // AST REWRITE
            // elements: group_by_clause, from_clause, where_clause, order_by_clause, limit_clause, select_clause, having_clause
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 169:2: -> ^( SELECT_QUERY ( select_clause )? from_clause ( where_clause )? ( order_by_clause )? ( group_by_clause )? ( having_clause )? ( limit_clause )? )
            {
                // /home/vmb/app/IdeaProjects/jengine/utils/ql/src/com/jengine/utils/ql/QL.g:169:5: ^( SELECT_QUERY ( select_clause )? from_clause ( where_clause )? ( order_by_clause )? ( group_by_clause )? ( having_clause )? ( limit_clause )? )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(adaptor.create(SELECT_QUERY, "SELECT_QUERY"), root_1);

                // /home/vmb/app/IdeaProjects/jengine/utils/ql/src/com/jengine/utils/ql/QL.g:169:20: ( select_clause )?
                if ( stream_select_clause.hasNext() ) {
                    adaptor.addChild(root_1, stream_select_clause.next());

                }
                stream_select_clause.reset();
                adaptor.addChild(root_1, stream_from_clause.next());
                // /home/vmb/app/IdeaProjects/jengine/utils/ql/src/com/jengine/utils/ql/QL.g:169:47: ( where_clause )?
                if ( stream_where_clause.hasNext() ) {
                    adaptor.addChild(root_1, stream_where_clause.next());

                }
                stream_where_clause.reset();
                // /home/vmb/app/IdeaProjects/jengine/utils/ql/src/com/jengine/utils/ql/QL.g:169:61: ( order_by_clause )?
                if ( stream_order_by_clause.hasNext() ) {
                    adaptor.addChild(root_1, stream_order_by_clause.next());

                }
                stream_order_by_clause.reset();
                // /home/vmb/app/IdeaProjects/jengine/utils/ql/src/com/jengine/utils/ql/QL.g:169:78: ( group_by_clause )?
                if ( stream_group_by_clause.hasNext() ) {
                    adaptor.addChild(root_1, stream_group_by_clause.next());

                }
                stream_group_by_clause.reset();
                // /home/vmb/app/IdeaProjects/jengine/utils/ql/src/com/jengine/utils/ql/QL.g:169:95: ( having_clause )?
                if ( stream_having_clause.hasNext() ) {
                    adaptor.addChild(root_1, stream_having_clause.next());

                }
                stream_having_clause.reset();
                // /home/vmb/app/IdeaProjects/jengine/utils/ql/src/com/jengine/utils/ql/QL.g:169:110: ( limit_clause )?
                if ( stream_limit_clause.hasNext() ) {
                    adaptor.addChild(root_1, stream_limit_clause.next());

                }
                stream_limit_clause.reset();

                adaptor.addChild(root_0, root_1);
                }

            }



            }

            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end select_query

    public static class select_clause_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start select_clause
    // /home/vmb/app/IdeaProjects/jengine/utils/ql/src/com/jengine/utils/ql/QL.g:172:1: select_clause : SELECT (d= DISTINCT )? targets -> ^( SELECT_CLAUSE targets ( $d)? ) ;
    public final select_clause_return select_clause() throws RecognitionException {
        select_clause_return retval = new select_clause_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token d=null;
        Token SELECT9=null;
        targets_return targets10 = null;


        Object d_tree=null;
        Object SELECT9_tree=null;
        RewriteRuleTokenStream stream_SELECT=new RewriteRuleTokenStream(adaptor,"token SELECT");
        RewriteRuleTokenStream stream_DISTINCT=new RewriteRuleTokenStream(adaptor,"token DISTINCT");
        RewriteRuleSubtreeStream stream_targets=new RewriteRuleSubtreeStream(adaptor,"rule targets");
        try {
            // /home/vmb/app/IdeaProjects/jengine/utils/ql/src/com/jengine/utils/ql/QL.g:172:14: ( SELECT (d= DISTINCT )? targets -> ^( SELECT_CLAUSE targets ( $d)? ) )
            // /home/vmb/app/IdeaProjects/jengine/utils/ql/src/com/jengine/utils/ql/QL.g:173:2: SELECT (d= DISTINCT )? targets
            {
            SELECT9=(Token)input.LT(1);
            match(input,SELECT,FOLLOW_SELECT_in_select_clause2191); 
            stream_SELECT.add(SELECT9);

            // /home/vmb/app/IdeaProjects/jengine/utils/ql/src/com/jengine/utils/ql/QL.g:173:9: (d= DISTINCT )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==DISTINCT) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // /home/vmb/app/IdeaProjects/jengine/utils/ql/src/com/jengine/utils/ql/QL.g:173:10: d= DISTINCT
                    {
                    d=(Token)input.LT(1);
                    match(input,DISTINCT,FOLLOW_DISTINCT_in_select_clause2196); 
                    stream_DISTINCT.add(d);


                    }
                    break;

            }

            pushFollow(FOLLOW_targets_in_select_clause2200);
            targets10=targets();
            _fsp--;

            stream_targets.add(targets10.getTree());

            // AST REWRITE
            // elements: d, targets
            // token labels: d
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            RewriteRuleTokenStream stream_d=new RewriteRuleTokenStream(adaptor,"token d",d);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 173:31: -> ^( SELECT_CLAUSE targets ( $d)? )
            {
                // /home/vmb/app/IdeaProjects/jengine/utils/ql/src/com/jengine/utils/ql/QL.g:173:34: ^( SELECT_CLAUSE targets ( $d)? )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(adaptor.create(SELECT_CLAUSE, "SELECT_CLAUSE"), root_1);

                adaptor.addChild(root_1, stream_targets.next());
                // /home/vmb/app/IdeaProjects/jengine/utils/ql/src/com/jengine/utils/ql/QL.g:173:58: ( $d)?
                if ( stream_d.hasNext() ) {
                    adaptor.addChild(root_1, stream_d.next());

                }
                stream_d.reset();

                adaptor.addChild(root_0, root_1);
                }

            }



            }

            retval.stop = input.LT(-1);
